# ha-voiceagent-llm-benchmark

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: benchmark.example.yaml  prompt_tweaking_f4.yaml  prompt_tweaking_f4_domain.txt  prompt_tweaking_f7.yaml  prompt_tweaking_f7_f4.yaml  prompt_tweaking_f7_f4_combined.txt  prompt_tweaking_f7_refusal.txt  qwen3.5_f7_refusal.txt  qwen3.5_nothink.yaml  qwen3.5_thinking.yaml
docs/: architecture.md  env.example  failure-patterns.md  gotchas_learnings.md  ha-benchmark-run-and-analysis.md  ha-prompt-engineering.md  ha-prompt-reference.md  implementation-plan-m1.md  scoring-design.md  test-data-format.md  user-setup.md
docs/data_generation_guide/: derivation-guide.md  filter_inventory.py  generation-guide.md  generation-principles.md  test-case-derivation-guide.md  (+3 more)
reports/: benchmark-run-analysis-2026-03.md  gemma4-benchmark-2026-04-25.md  gemma4-budget256-benchmark-2026-04-26.md  gemma4-budget512-benchmark-2026-04-25.md  prompt-tweaking-cross-config-comparison-2026-04-04.md  prompt-tweaking-f4-domain-2026-04-04.md  prompt-tweaking-f7-f4-combined-2026-04-04.md  prompt-tweaking-f7-refusal-2026-04-04.md  qwen3.5-benchmark-2026-04-04.md
sample_test_data/: sample_inventory.yaml  sample_test_cases.ndjson  small-ha-entities.yaml  small-test-cases.ndjson  small.yaml  small_test_cases.ndjson
scripts/: assemble_tier.py  llama_server.py  run_benchmark.py  run_multi_benchmark.py
tests/: conftest.py  test_dataset.py  test_orchestration.py  test_prompt.py  test_scorers.py  test_tools.py
(+117 files in other folders)
