[project]
name = "ha-voice-bench"
version = "0.1.0"
description = "Home Assistant voice LLM benchmarking with Inspect AI"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "inspect-ai>=0.3.184,<0.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ha_voice_bench"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
